// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#rdb mcp-server-connection generator > should add RDS CA bundle to Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

WORKDIR /app

COPY . /app

ADD --chmod=0644 https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /opt/global-bundle.pem

EXPOSE 8000

ENV PYTHONPATH=/app

CMD ["python", "-m", "uvicorn", "proj_my_mcp_server.mcp_server.http:app", "--host", "0.0.0.0", "--port", "8000"]
"
`;

exports[`py#rdb mcp-server-connection generator > should add RDS CA bundle to sourceComponent Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

WORKDIR /app

COPY . /app

ADD --chmod=0644 https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /opt/global-bundle.pem

EXPOSE 8000

ENV PYTHONPATH=/app

CMD ["python", "-m", "uvicorn", "proj_my_mcp_server.custom_mcp_server.http:app", "--host", "0.0.0.0", "--port", "8000"]
"
`;

exports[`py#rdb mcp-server-connection generator > should add rdb dev dependency to mcp-server dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp-server",
  "root": "packages/my-mcp-server",
  "sourceRoot": "packages/my-mcp-server/src/proj_my_mcp_server",
  "targets": {
    "mcp-server-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`py#rdb mcp-server-connection generator > should be idempotent for Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

WORKDIR /app

COPY . /app

ADD --chmod=0644 https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /opt/global-bundle.pem

EXPOSE 8000

ENV PYTHONPATH=/app

CMD ["python", "-m", "uvicorn", "proj_my_mcp_server.mcp_server.http:app", "--host", "0.0.0.0", "--port", "8000"]
"
`;

exports[`py#rdb mcp-server-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-mcp-server",
  "root": "packages/my-mcp-server",
  "sourceRoot": "packages/my-mcp-server/src/proj_my_mcp_server",
  "targets": {
    "custom-mcp-server-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
